# acuitybench-rebuild

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARTIFACTS.sha256  AUDIT.md  HANDOVER.md  NOTICE.md  README.md  pyproject.toml  sources.lock.json
acuitybench/: __init__.py  __main__.py  cli.py  distributional.py  evaluation.py  models.py  pipeline.py  plotting.py  reporting.py  sources.py  static_student.py  store.py  synthetic.py  validation.py
acuitybench/interactive/: __init__.py  costing.py  schema_validation.py  seed.py  simulator.py
acuitybench/providers/: __init__.py  anthropic.py  base.py  (+1 more)
configs/: models.yaml  rubric.yaml  static_student.v1.yaml
data/: README.md
docs/: README.md  interactive-triage-v1.md
examples/: interactive_actions.json
prompts/: synthetic_case_generator.v0.md  synthetic_labeler.v0.md
results/: README.md  evaluations.sqlite3
schemas/: interactive-action-v1.schema.json  interactive-case-card-v1.schema.json  static-acuity-example-v1.schema.json  synthetic-candidate-v0.schema.json  synthetic-candidate-v1.schema.json  synthetic-generation-v0.schema.json  synthetic-label-v0.schema.json
tests/: test_anthropic_provider.py  test_evaluation.py  test_frontier_svg.py  test_interactive_costing.py  test_interactive_schema_validation.py  test_interactive_schemas.py  test_interactive_seed.py  test_interactive_simulator.py  test_knowledge_bundle.py  test_latency_reporting.py  test_models.py  test_openai_streaming.py  test_pipeline.py  test_static_student.py  test_store_migration.py  test_synthetic_pilot.py  test_timing.py
(+228 files in other folders)
